# epos-tts-copy

./: .gitignore  BUILD  CMakeLists.txt  Changes  Makefile.am  Makefile.common  Makefile.in  README.dos  THANKS  WELCOME  acinclude.m4  aclocal.m4  ansihdr.txt  block.cc  common.h  config.h  config.h.in  configure  configure.ac  configure.in  daemon.cc  data_files.am  defaults.h  elements.cc  elements.h  exc.h  hash.cc  hash.h  hashtmpl.cc  install  interf.cc  interf.h  ktdsyn.cc  ktdsyn.h  libtool  logfile  logfile.tar  matlab.in  monolith.cc  nnet.cc  (+19 more)
TMP/: matlab.in  ssansi.ini  ssfixed.ini  ssrtf.ini
arch/: Makefile.am  Makefile.in  data_files.am  version.h
arch/dos/: README.dos  config.in  epos.cpp
arch/unix/: Makefile.dummy  acconfig.h  addcflag  commat  cstodos  distcfg  docopts  listtmp  longopts  ltx  makedate  makedflt  makedflt.sed  makeinst  makenicedate  maketgz  makever  rerunepos  tag  test.optdoc  test.version
arch/win/: 8859-2.enc  README.dos  accent.conv  config.h.borland.old  config.h.winnt  config.in  configure.bat  convert.bat  cp1250.enc  epos.cpp  epos.dsp  epos.dsw  epos.ini  eposm.dsp  instserv.dsp  say.dsp
arch/win-ce/: config.in  config.in.orig  configure.bat  epos.vcp  epos.vcp.orig
cfg/: Makefile.am  Makefile.in  allowed.ini  data_dirs.am  data_files.am  default.ini  default.ini.orig  default.rul  diff  epos.ini  fixed.ini  matlab.in  restr.ini  rtf.ini  rtfftr.txt  ss.ini  ss_2_27.tcl  ssansi.ini  ssdeflt.ini  ssfixed.ini  ssfixed.ini.local  ssrtf.ini  text.txt  tmpÚÚ  winepos.ini  x
cfg/TMP/: ss.ini  ssdeflt.ini
cfg/cfg/: allowed.ini  ansi.ini  default.ini  default.rul  fixed.ini  fixed.ini.orig  restr.ini  ss.ini.local  ssdeflt.ini  ssdeflt.ini.local  ssfixed.ini
cfg/inv/: README
cfg/prosody/: exclaim.dic  fadeoutp.dic  fadeoutq.dic  fadeouts.dic  fadeoutw.dic  ir_unter.dic  irony.dic  nonterm.dic  questend.dic  shorten.dic  shortiso.dic  stress.dic  wh.dic
doc/: COPYING  Changes  FAQ  Files  Intro  Makefile.am  Makefile.in  Todo  Todo.orig  applied-diff-81-to-Daniel  cz-lat2-prog.map  devel.sgml  header.sgml  intro.sgml  numbers  options.sgml  rules.sgml  security.sgml  ttscp.sgml
doc/czech/: README  classes.doc  debug.doc  dict.doc  difony.doc  hash.doc  input.doc  neuralnet.doc  options.doc  output.doc  prosody.doc  rules.doc  sound.doc
doc/english/: .sgml.info  00tmp  DEADJOE  FORMATS  Makefile  NOTES  allowed.ini  devel.sgml  epos-1.html  epos-2.html  epos-3.html  epos-4.html  epos-5.html  epos-6.html  epos-7.html  epos.dvi  epos.html  epos.txt  header.sgml  intro.sgml  ltx  options.doc  options.sgml  prosody.doc  protocol.doc  rules.doc  rules.sgml  rules.sgml.orig  security.sgml  stra  todo  ttscp.sgml
doc/slovak/: ptdsyn.txt
inv/USEKY/: 'E.PSL  -A.PSL  -C.PSL  -I.PSL  -J.PSL  A'.PSL  AD.PSL  AF.PSL  AR.PSL  AR~.PSL  AT~.PSL  AU.PSL  BA.PSL  CF.PSL  DA.PSL  DO.PSL  D~I.PSL  EC.PSL  ED.PSL  ED~.PSL  EV.PSL  E~K.PSL  E~P.PSL  E~V.PSL  FA.PSL  GA.PSL  GN.PSL  GO.PSL  HE~.PSL  IR.PSL  IS~.PSL  IX.PSL  JN.PSL  LE.PSL  LU.PSL  L~A.PSL  M-.PSL  MC.PSL  ME.PSL  MI.PSL  (+33 more)
inv/czech/: UNKNOWN  float4.ini  float97.ini  int2.ini  int3.ini  kadlec.ini  kadlec.int  kubec.ini  kubec_f.ini  kubecvq.ini  lmodely2.syn  modely.int  modely4.syn  ptacek97.dph  vichova.ini  vq.ini
inv/kadlec-hp/: 'I.PSL  -'.PSL  -F.PSL  -G.PSL  -H.PSL  -K.PSL  -L.PSL  -N~.PSL  -O.PSL  -P.PSL  -R~.PSL  -T.PSL  -T~.PSL  -U.PSL  -V.PSL  A-.PSL  AA.PSL  AB.PSL  AC.PSL  AD.PSL  AD~.PSL  AF.PSL  AG.PSL  AH.PSL  AK.PSL  AL.PSL  AM~.PSL  AN.PSL  AN~.PSL  AP.PSL  AR.PSL  AS.PSL  AT.PSL  AT~.PSL  AZ~.PSL  BA.PSL  BE~.PSL  BI.PSL  BJ.PSL  BO.PSL  (+180 more)
inv/kadlec-hsn/: 'A.PSL  'I.PSL  'U.PSL  -C~.PSL  -D.PSL  -E.PSL  -I.PSL  -J.PSL  -L.PSL  -M.PSL  -N~.PSL  -S.PSL  -T.PSL  -U.PSL  -Z.PSL  A-.PSL  AA.PSL  AB.PSL  AC.PSL  AC~.PSL  AF.PSL  AJ.PSL  AK.PSL  AM.PSL  AM~.PSL  AN.PSL  AR~.PSL  AS.PSL  AS~.PSL  AT~.PSL  AV.PSL  AZ.PSL  BA.PSL  BE.PSL  BJ.PSL  BO.PSL  BU.PSL  CO.PSL  CU.PSL  C~I.PSL  (+152 more)
inv/kadlec-hss/: 'E.PSL  'I.PSL  (E~.PSL  -C.PSL  -E~.PSL  -L.PSL  -M.PSL  -P.PSL  -R~.PSL  -U.PSL  -V.PSL  -Z.PSL  A-.PSL  AC.PSL  AC~.PSL  AD.PSL  AG.PSL  AK.PSL  AL.PSL  AM.PSL  AN~.PSL  AR.PSL  AR~.PSL  AT.PSL  AV.PSL  BA.PSL  BJ.PSL  BU.PSL  CA.PSL  CE.PSL  CI.PSL  CK.PSL  CN~.PSL  CO.PSL  C~E.PSL  C~U.PSL  DA.PSL  DH.PSL  DN.PSL  DN~.PSL  (+159 more)
libs/: Makefile.in  data_files.am
lng/: DEADJOE
mappings/: README
prosody/: accent.dic  exclafad.dic  fadeoutp.dic.local  fadeoutw.dic  irony.dic.local  nonterm.dic  nonterm.dic.local  questup.dic  shortiso.dic
root/: stra
src/: 00tmp  EPOS_SAPI_eng.aps  EPOS_SAPI_eng.cpp  EPOS_SAPI_eng.def  EPOS_SAPI_eng.dsp  EPOS_SAPI_eng.h  EPOS_SAPI_eng.idl  EPOS_SAPI_eng.plg  EPOS_SAPI_eng.rc  EPOS_SAPI_eng.tlb  EPOS_SAPI_eng_i.c  EPOS_SAPI_engps.def  Makefile  Makefile.am  Makefile.in  Makefile.in.orig  SAPI_TTSCP.plg  StdAfx.h  TTS_Engine.cpp  TTS_Engine.h  TTS_Engine.rgs  TTS_Engine_OLD_03_27.cpp  TTS_Engine_old.cpp  UpgradeLog.XML  agent.cc  agent.cc.orig  agent.cpp  agent.h  block.cc  block.cc.orig  changes.txt  chybky  clambr.cpp  clambr.h  client.cc  client.cpp  client.h  common.h  common.h.orig  config.h  (+164 more)
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/nnet/: Makefile.am  Makefile.in  enumstring.cpp  enumstring.h  iterator.h  map.h  matrix.cc  matrix.h  neural.cc  neural.h  neural.old.cc  neural.old.h  neural.tab.cc  neural.y  neural_parse.cc  neural_parse.h  neural_parse.yy  pair.h  perceptron.cc  perceptron.cpp  perceptron.h  set.h  slowstring.cc  slowstring.h  stream.cc  stream.h  string.cpp  string.h  traindata.cc  traindata.cpp  traindata.h  types.h  utils.cc  utils.cpp  utils.h  vector.h  xml.cpp  xml.h  xml.y  xml.y.tab.cpp  (+7 more)
src/nnet/stream/: bang_fstream.cpp  bang_fstream.h  bang_ios.h  bang_iostream.cpp  bang_iostream.h  bang_istream.cpp  bang_istream.h  bang_ostream.cpp  bang_ostream.h
src/nnet/xmltest/: data_test1.txt  log.txt  main.cpp  nnseries.txt  shriek.cpp  trdat1.txt  trproc.txt  trproc1.txt  trproc_test1.txt  xmltest.dsp
src/tests/: Makefile.am  Makefile.in  vrfy.cc
ttscp/help/: data  (+3 more)
(+1655 files in other folders)
