
dnl Process this file with autoconf to produce a configure script

AC_INIT(unit.cc)
AC_PREFIX_DEFAULT(/usr)

dnl AC_DEFINE_UNQUOTED(BASE_DIR, $libdir) didn't unquote enough

AC_ARG_ENABLE(DMALLOC, dmalloc debugging library (developers only))
AC_ARG_ENABLE(REGEX, regular expression substitution)

CCC="g++ c++ cc++ gcc cc"
AC_PROG_CXX
if test $GXX = yes; then 
	if $CXX -v 2>&1 | grep -q egcs
		then CFLAGS="-Wall -Wunused -pipe -gstabs+ -fdefer-pop"
		else CFLAGS="-Wall -Wunused -pipe -fhandle-exceptions"
	fi
	else CFLAGS=-O
fi

AC_LANG_CPLUSPLUS

AC_CHECK_PROGS(LNK, ld wlink, linker)
AC_CHECK_LIB(stdc++, main)
AC_CHECK_LIB(c, regcomp)
AC_CHECK_LIB(rx, regcomp)
AC_CHECK_LIB(regex, regcomp)
AC_LANG_CPLUSPLUS
AC_PROG_INSTALL
AC_STDC_HEADERS
AC_HAVE_HEADERS(strings.h)
AC_HAVE_HEADERS(string.h)
AC_HAVE_HEADERS(io.h)
AC_HAVE_HEADERS(rx.h)
AC_HAVE_HEADERS(regex.h)
AC_HAVE_HEADERS(errno.h)
AC_HAVE_HEADERS(wait.h)
AC_HAVE_HEADERS(unistd.h)
AC_HAVE_HEADERS(unix.h)
AC_HAVE_HEADERS(signal.h)
AC_HAVE_HEADERS(sys/soundcard.h)
AC_HAVE_HEADERS(sys/audio.h)
AC_HAVE_HEADERS(sys/stat.h)
AC_HAVE_HEADERS(sys/ioctl.h)
AC_HAVE_HEADERS(sys/socket.h)
AC_HAVE_HEADERS(sys/select.h)
AC_HAVE_HEADERS(sys/time.h)
AC_HAVE_HEADERS(sys/types.h)
AC_HAVE_HEADERS(netdb.h)
AC_HAVE_HEADERS(netinet/in.h)
AC_HAVE_HEADERS(linux/kd.h)
AC_HAVE_HEADERS(sys/kernel.h)
AC_HAVE_HEADERS(sys/name.h)
AC_HAVE_FUNCS(strerror strdup fork strcasecmp stricmp qnx_name_attach)
AC_INLINE
AC_CONST

AC_CACHE_CHECK("for terminate",
   epos_cv_fn_terminate,
   AC_TRY_COMPILE(,
	throw new int; exit(1); terminate(),
	epos_cv_fn_terminate=yes,
	epos_cv_fn_terminate=no,
	epos_cv_fn_terminate=yes)
)
if test "$epos_cv_fn_terminate" = yes; then
   AC_DEFINE(HAVE_TERMINATE)
fi

AC_CACHE_CHECK("for built-in bool",
   epos_cv_type_bool,
   AC_TRY_COMPILE(,
	bool b,
	epos_cv_type_bool=yes,
	epos_cv_type_bool=no)
)
if test "$epos_cv_type_bool" = yes; then
   AC_DEFINE(HAVE_BOOL)
fi

AC_CACHE_CHECK("for explicit template instatiations",
   epos_cv_c_templ_inst,
   AC_TRY_COMPILE(
	template <class any_type> class some_type{}; template class some_type<int>;,
	,
	epos_cv_c_templ_inst=yes,
	epos_cv_c_templ_inst=no)
)
if test "$epos_cv_c_templ_inst" = yes; then
   AC_DEFINE(HAVE_TEMPL_INST)
fi

AC_CACHE_CHECK("for socklen_t",
   epos_cv_type_socklen,
   AC_TRY_COMPILE(
	#ifdef HAVE_SYS_SOCKET_H
	#include <sys/socket.h>
	#endif
	#include <sys/types.h>
	socklen_t x;,
	,
	epos_cv_type_socklen=yes,
	epos_cv_type_socklen=no)
)
if test "$epos_cv_type_socklen" = yes; then
   AC_DEFINE(HAVE_SOCKLEN_T)
fi

broken_enum_bitfields_test='\
	enum t { a, b, c };	\
	struct s		\
	{			\
		t m : 2;	\
		t n : 2;	\
		t o : 2;	\
	};			\
	s arr[[2]] = {{a, b, c},{c, c, c}};\
	void main()		\
	{			\
		exit (arr[[1]].n != 2);	\
	}\
	'

AC_CACHE_CHECK("for broken enum bitfields",
   epos_cv_c_broken_enum_bitfields,
   AC_TRY_RUN(
	$broken_enum_bitfields_test,
	epos_cv_c_broken_enum_bitfields=no,
	epos_cv_c_broken_enum_bitfields=yes,
	epos_cv_c_broken_enum_bitfields=yes)
)
if test "$epos_cv_c_broken_enum_bitfields" = yes; then
   AC_DEFINE(BROKEN_ENUM_BITFIELDS)
fi


AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)

